# Reef-Workability

./: .gitignore  README.md  download_and_preprocess_all.py  download_and_process_all.py  make_results_table.py  model_training.py  pyproject.toml  report_visualizations.ipynb
Data/: .gitignore  BPM_weather_failures.csv  COTS INLOC Weather impacts.xlsx  GBR_labels_coords.csv  ReefCentroids.csv  note.txt  readme.md  surveyData[63].csv
analysis/: wind_wave_constraint_analysis.py
data/collection/: download_nopp_hindcast.py
data_processing/collection/: download_australian_whacs.py  download_era5_data.py  download_noaa_ww3.py  download_nopp_hindcast.py  download_tools.py
data_processing/dumping/: dump_predicted_probabilities.py
data_processing/extraction/: extract_era5_for_visits.py  extract_historical_era5_for_centroids.py  extract_historical_whacs_for_centroids.py  extract_whacs_for_visits.py  split_into_daily_csvs.py  weather_extractor.py  whacs_weather_extractor.py
data_processing/processing/: merge_reef_coordinates.py  merge_reef_weather_grid.py  merge_visit_dfs.py  predict_reef_date_success_probabilities.py  process_bpm_visits.py
models/: batch_predict_workability.py  model_training.py  standardize_model_files.py
visualization/: constrained_probability_heatmaps.py  wind_wave_constraint_analysis.py
